remove unused test and imports